[gd_scene load_steps=6 format=3 uid="uid://bj3vnstv5q1tk"]

[ext_resource type="Script" uid="uid://bvjxl5v6wlhxa" path="res://objects/player/player.gd" id="1_g7ett"]
[ext_resource type="Texture2D" uid="uid://dhiucx3rhvem6" path="res://assets/sprites/player/square.png" id="2_jnjyq"]
[ext_resource type="Texture2D" uid="uid://bwxki7ab0s2lt" path="res://assets/sprites/player/circle.png" id="2_ssrue"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ssrue"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssrue"]
size = Vector2(256, 256)

[node name="Player" type="Node2D"]
process_mode = 1
script = ExtResource("1_g7ett")

[node name="HeadRoot" type="Node2D" parent="."]

[node name="Head" type="Area2D" parent="HeadRoot"]
collision_layer = 3
collision_mask = 7
input_pickable = false

[node name="Nose" type="Sprite2D" parent="HeadRoot/Head"]
position = Vector2(380, 0)
scale = Vector2(0.97, 0.275)
texture = ExtResource("2_jnjyq")

[node name="HeadSprite" type="Sprite2D" parent="HeadRoot/Head"]
modulate = Color(1, 1, 0, 1)
z_index = -1
texture = ExtResource("2_ssrue")

[node name="Circle" type="CollisionShape2D" parent="HeadRoot/Head"]
z_index = 1
shape = SubResource("CircleShape2D_ssrue")

[node name="Square" type="CollisionShape2D" parent="HeadRoot/Head"]
z_index = 1
shape = SubResource("RectangleShape2D_ssrue")
disabled = true

[node name="TrailRoot" type="Node2D" parent="."]
z_index = -2

[node name="TrailCollisions" type="Area2D" parent="TrailRoot"]
z_index = 1
collision_layer = 3
collision_mask = 0
input_pickable = false
monitoring = false

[node name="Lines" type="Node2D" parent="TrailRoot"]
